# fast_zero

./: .coverage  .env  .gitignore  README.md  pyproject.toml
fast_zero/: app.py  database.py  models.py  security.py  settings.py
fast_zero/routers/: auth.py  todos.py
migrations/: env.py
migrations/versions/: 003fa03cde3e_create_todos_table.py  bea2e3b764b0_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
